@@ -73,6 +73,8 @@ Other Changes
 
 * SOLR-12805: Store previous term (generation) of replica when start recovery process (Cao Manh Dat)
 
+* SOLR-12652: Remove SolrMetricManager.overridableRegistryName method (Peter Somogyi via David Smiley)
+
 ==================  7.6.0 ==================
 
 Consult the LUCENE_CHANGES.txt file for additional, low level, changes in this release.
